# my_inspire_hand

./: README.md
my_inspire_hand/: CMakeLists.txt  package.xml
my_inspire_hand/config/: controllers.yaml  physics.config
my_inspire_hand/launch/: control.launch.py  gazebo.launch.py  hand_control.launch.py
my_inspire_hand/src/: make_fist.py
my_inspire_hand/urdf/: inspire_hand_left.urdf
